atualizações terça final

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
         <!-- titulo -->
         <div>
-            <h1>
+            <h1 class="titulo">
                 Cadastro
             </h1>
         </div>
@@ -17,14 +17,14 @@
         <!-- formulario -->
                 <form>
                     <!-- nome e sobrenome -->
-                    <fieldset>
-                        <div>
+                    <fieldset class="campo">
+                        <div class="campo">
                             <label> 
                                 <strong>Nome</strong>
                             </label>
                             <input type="text" name="nome" id="nome">
                         </div>
-                        <div>
+                        <div class="campo">
                             <label> 
                                 <strong>Sobrenome</strong>
                             </label>
@@ -32,14 +32,14 @@
                         </div>
                     </fieldset>
                     <!-- email e senha -->
-                    <fieldset>
-                        <div>
+                    <fieldset class="campo">
+                        <div class="campo">
                             <label> 
                                 <strong>Email</strong>
                             </label>
                             <input type="email" name="email" id="email">
                         </div>
-                        <div>
+                        <div class="campo">
                             <label> 
                                 <strong>Senha</strong>
                             </label>
@@ -47,8 +47,8 @@
                         </div>
                     </fieldset>
                     <!-- nascimento e curso -->
-                    <div>
-                        <div>
+                    <div class="campo">
+                        <div class="campo">
                             <label>
                                 <strong>Data de Nascimento</strong>
                             </label>
@@ -68,7 +68,7 @@
                             </label>
                     </div>
                     <!-- turnos -->
-                    <div>
+                    <div class="campo">
                             <label for="">
                                 <strong>Turno</strong>
                             </label>
