--- a/form.html
+++ b/form.html
@@ -15,9 +15,9 @@
         </div>
 
         <!-- formulario -->
-                <form>
+        <form>
                     <!-- nome e sobrenome -->
-                    <fieldset class="campo">
+                    <fieldset class="grupo">
                         <div class="campo">
                             <label> 
                                 <strong>Nome</strong>
@@ -32,7 +32,7 @@
                         </div>
                     </fieldset>
                     <!-- email e senha -->
-                    <fieldset class="campo">
+                    <fieldset class="grupo">
                         <div class="campo">
                             <label> 
                                 <strong>Email</strong>
@@ -54,18 +54,18 @@
                             </label>
                             <input type="date" name="nasci" id="nasci">
                         </div>
-                            <label>
+                        <label>
                                 <strong>Curso</strong>
-                            </label>
-                            <label>
-                                <input type="radio" name="curso" value="front-end"> Front-end
-                            </label>
-                            <label>
+                        </label>
+                        <label>
+                               <input type="radio" name="curso" value="front-end"> Front-end
+                        </label>
+                        <label>
                                 <input type="radio" name="curso" value="back-end"> Back-end
-                            </label>
-                            <label>
+                        </label>
+                        <label>
                                 <input type="radio" name="curso" value="full-stack"> Full-Stack
-                            </label>
+                        </label>
                     </div>
                     <!-- turnos -->
                     <div class="campo">
@@ -80,9 +80,9 @@
                             </select>
                     </div>
 
-                    <button type="submit" onsubmit="">Cadastar</button>
+                    <button class="botao" type="submit" onsubmit="">Cadastar</button>
                     
-                </form>
+        </form>
 
 </body>
 </html>
